# training-project

./: .copilot-instructions.md  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.cursor/rules/: lint-format-no-comments.mdc
back/: .flake8  .isort.cfg  Dockerfile  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 80637e00f2f2_user_models.py  b0d3705dbdab_add_leave_request_and_leave_type_tables.py  bf5a982230e0_update_user_model_with_role_and_name.py  ce82c1178834_user_model.py  fbab92c0c6a0_rename_hashed_password_to_password.py
back/app/: main.py  seeder.py
back/app/core/: auth.py  config.py
back/app/crud/: __init__.py  _base.py  admin.py  leave_request.py  leave_type.py  user.py
back/app/db/: base.py  int_enum.py  session.py
back/app/middlewares/: db_session.py  input_validation.py  rate_limit.py  request_logging.py  security_headers.py
back/app/models/: __init__.py  default.py  leave_request.py  leave_type.py  user.py
back/app/schemas/: admin.py  leave_request.py  user.py
back/app/seeds/: leave_type_seed.py  user_seed.py
back/app/seeds/datas/: leave_types.json  users.json
back/app/v1/: admin.py  api.py  deps.py  leave_requests.py
back/app/v1/common/: auth.py
back/test/: test_rate_limit.py  test_security.py
docs/: leave-management.md
front/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.prod  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
front/pages/: 403.vue  (+7 more)
secret/: .env.example
(+94 files in other folders)
